--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <title>아무것도 안 했는데...</title>
   </head>
 
